--- a/vignettes/example_probit.Rmd
+++ b/vignettes/example_probit.Rmd
@@ -17,11 +17,9 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.align = "center",
   fig.dim = c(8, 6), 
-  out.width = "75%",
-  eval = FALSE
+  out.width = "75%"
 )
-# library("ino")
-devtools::load_all() # remove later
+library("ino")
 options("ino_verbose" = TRUE) 
 ```
 
@@ -84,21 +82,21 @@ The probit likelihood function is implemented as `f_ll_mnp()` and can be evaluat
 f_ll_mnp(theta = theta, data = probit_data)
 ```
 
-## Setup in {ino}
+## Setup
 
 To analyze the outcome of the numerical likelihood optimization for the multinomial mixed probit model, we apply the `{ino}` package:
 
 - We first define a `Nop` object by setting the target function `f = f_ll_mnp`, the number of parameters to `npar = 7`, and `data = probit_data`. 
 - Then, we apply the `stats::nlm` optimizer with a limit of 1000 iterations. Since this optimizer minimizes the objective function instead of maximizing it, we set `neg = TRUE` to compute the negative log-likelihood value.
 
-```{r, define Nop, eval = TRUE}
+```{r, define Nop, eval = FALSE}
 probit_ino <- Nop$new(f = f_ll_mnp, npar = 7, data = probit_data, neg = TRUE)$
   set_optimizer(optimizer_nlm(iterlim = 1000))
 ```
 
 The true parameter vector `theta` is saved to assess the convergence of the optimization runs to the global optimum:
 
-```{r, set true parameter, eval = TRUE}
+```{r, set true parameter, eval = FALSE}
 probit_ino$true_parameter <- theta
 ```
 
@@ -110,29 +108,60 @@ print(probit_ino)
 
 ## Random initialization
 
-We optimize `runs = 100` times using random initial values drawn from a standard normal distribution:
+As a benchmark, we optimize `runs = 100` times using random initial values drawn from a standard normal distribution:
 
-```{r, optimize with random initial values}
+```{r, optimize with random initial values, eval = FALSE}
 probit_ino$optimize(initial = "random", runs = 100, label = "random")
 ```
 
 ## Initializing using estimates from a data subsample
 
-```{r}
+Next, we obtain starting values by estimating a probit model on a subset of the data. In this example, we randomly select 20\% of the data points for the subset. Our aim is to initialize the full model close to its global optimum by investing a small computational effort in estimating the reduced model:
+
+```{r, optimize on subset, eval = FALSE}
 probit_ino$
   reduce("data", how = "random", proportion = 0.2)$
   optimize(initial = "random", runs = 100, label = "subset")$
   reset_argument("data")$
   continue()
 ```
+
+The `$reduce()` method offers additional options for selecting the composition of the subset, which can further enhance the initialization process:
+
+- `how = "first"` and `how = "last"`: These options allow to select the subset from the beginning or the end of the data, respectively, focusing on specific segments of the data set.
+
+- `how = "similar"` and `how = "dissimilar"`: These options utilize k-means clustering to identify subsets of similar or dissimilar data points. By clustering the data based on similarity, a subset that represents a distinct group within the data set can be selected. This approach can be particularly useful when there are distinct patterns or characteristics within the data.
 	
 ## Estimation with standardized covariates
 
-```{r}
+In choice settings, covariates can have varying scales, which can result in differences in the magnitudes of model parameters. To enhance numerical stability during estimation, a common strategy is to standardize the covariates prior to the estimation. Here, we evaluate the effectiveness of standardizing covariates using the `$standardize()` method. By setting `ignore = 1:3`, we exclude the first columns containing indices from the standardization.
+
+```{r, optimize with standardized data, eval = FALSE}
 probit_ino$
   standardize("data", by_column = TRUE, ignore = 1:3)$
   optimize(initial = "random", runs = 100, label = "standardized")$
   reset_argument("data")
+```
+
+## Results
+
+```{r, optima, eval = TRUE}
+probit_ino$optima(digits = 0, which_run = "random")
+probit_ino$optima(digits = 0, which_run = "subset")
+```
+
+```{r, times, eval = TRUE, message = FALSE}
+plot(probit_ino, by = "label", relative = TRUE)
+```
+	
+```{r, summary, eval = TRUE}
+library("dplyr")
+summary(probit_ino, which_element = c("seconds", "label")) %>% 
+  group_by(label) %>% 
+  summarize(
+    mean_seconds = mean(seconds, na.rm = TRUE),
+    sd_seconds = sd(seconds, na.rm = TRUE)
+  )
 ```
 	
 ## References
